# IDATG2102_AlgMet

./: BianryTreeAnalyzerTwo.cpp  BinaryTreeAnalyzer.cpp  BinaryTreeTraversal.cpp  CMakeLists.txt  Graph.cpp  LegalPermutationCase.cpp  Map.cpp  Sudoku.cpp  ThreeCaseFour.cpp  TreeCaseThree.cpp  Vector.cpp  grid.cpp  heap.cpp  perfect_number.cpp  sudoku_grid.txt
mandatory_assignments/oblig_1/: oblig1.txt
mandatory_assignments/oblig_2/: BinaryTreeComparer.cpp
mandatory_assignments/oblig_3/: oblig_3.txt
mandatory_assignments/oblig_5/: BinaryTree.cpp  oppgave_1
written_tasks/: a  oppgave_10.txt  oppgave_11.txt  oppgave_12.txt  oppgave_13.txt  oppgave_14.txt  oppgave_16.txt  oppgave_17.txt  oppgave_18.txt  oppgave_20.txt  oppgave_21.txt  oppgave_22.txt  oppgave_23.txt  oppgave_25b.jfif  oppgave_3  oppgave_4
