cmake_minimum_required(VERSION 4.0)
project(IDATG2102_AlgMet)

set(CMAKE_CXX_STANDARD 20)

add_executable(IDATG2102_AlgMet
        Map.cpp
        BinaryTreeTraversal.cpp
        BinaryTreeAnalyzer.cpp
        Vector.cpp
        mandatory_assignments/oblig_2/BinaryTreeComparer.cpp
        grid.cpp
        BinaryTreeAnalyzerTwo.cpp
        TreeCaseThree.cpp
        ThreeCaseFour.cpp
        LegalPermutationCase.cpp
        heap.cpp
        fringe.cpp
        fringe.h
        MST.cpp
        mandatory_assignments/oblig_5/BinaryTree.cpp
        Graph.cpp
)
